# date-time

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data  pyproject.toml
analysis/: 2024-08-08_cohen_kappa.ipynb  README.md  cohen_kappa.ipynb  insights.ipynb  post_process.ipynb  sanity_checks.ipynb
benchmarks/: README.md  arithmetic.py  bad_timezones.py  bm_bad_timezone.py  bm_deprecated_functions.py  bm_replace.py  codeql_queries_benchmark.py  deprecated.py  multiple_nows.py  naive_utc_local.py  now.py  replace.py  run_benchmarks.py  test_arithmetic.py  test_date.py  test_deprecated.py  test_multiple_nows.py  test_replace.py  test_string_representation.py  test_timezones.py  test_tz_none.py  timezone.py
blogpost/: YearCoundownDraft.ipynb  YearCountdownDraft.ipynb
ck_data/: 2024-08-17_bug_analysis_base.tsv
codeql/: README.md
data/: diffs.csv
date-cop/: 0_create_benchmark_db.py  0_delete_unused_repos.py  0_generate_databases.py  1_generate_databases.py  README.md  _1_generate_databases.py  _2_run_benchmarks.py  create_benchmark_db.py
scripts/: 0_find_repos.py  0_get_repos.ipynb  0_get_repos.py  1__count_non_gr0_datetime_repos.py  1__panic_check_for_empty_dirs.py  1_filter_repos.ipynb  1_filter_repos.py  1_filter_repos_m_grep.py  1_get_repos.py  2024-07-29_poster_visualizations.ipynb  2024-08-08_cohen_kappa.ipynb  2_combine_m_grep_results.py  2_combine_repos.py  2_get_bugs.py  2_get_issues.py  2_get_issues_open.py  2_get_repo_statistics.py  3_get_bug_statistics.py  3_get_bugs.py  3_get_bugs.sh  3_get_issues.py  3_get_issues_diffs.ipynb  README.md  (+33 more)
(+1027 files in other folders)
