[tool.poetry]
name = "date-time"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
black = ">=24.3.0"
isort = ">=5.13.2"
pytest = ">=8.1.1"
pre-commit = ">=3.6.2"
requests = ">=2.32.2"
pandas = ">=2.2.1"
hypothesis = ">=6.100.1"
freezegun = ">=1.5.1"
arrow = ">=1.3.0"
pendulum = ">=3.0.0"
whenever = ">=0.6.1"
pytz = ">=2024.1"
tzlocal = ">=5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
